* You can now use mouse scroll wheel to navigate the menu
* Elma now saves State.dat when you change options
* You can now f1-p in editor (same as f1-enter but in editor)
* You can now change what LGR to use as the default from inside the options menu
* Replays recorded with f1-enter are now saved into renders/rec_filename folder instead of the root

## Minor Bug Fixes
* Enforce lowercase LGR filenames to fix loading issues on case-sensitive filesystems
* Foreground grass was accidentally inefficiently calculated, causing increased load time
* Internal editor's Save As dialog box could cause buffer overflows
* Internal editor's Save As would sometimes overwrite old files without giving a warning
* Level description in internal editor is properly centered
* Internal editor marks a level as changed if the case of the level description is changed
* Pictures named "aaccbbdd" could prevent internal editor tooltip from properly updating
* Show dialog if state.dat is inaccessible when updating top10 in an internal or merging state.dat
* Background menu balls would sometimes vanish on the "Please do not distribute" screen
* Improve some slightly buggy/inconsistent mouse click behaviour in internal editor
* Red helmet animation will no longer skip frames after the intro scrolling animation
* In internal editor, improve mouse lag and fix bug where mouse cursor would sometimes leave visual artifacts when left-clicking in empty space
* Sometimes there was a missing pixel in the internal editor where two lines touch each other
* The 3 timers (best time, flag tag time, current time) are now properly centered on screen
* Fix bike flickering at high zoom
* Fix some minor bike jitters in replay playback when bike or wheel rotates past an angle of 0 degrees (upright position)
* Fix bike/wheel jitters in replay playback in the first 2 frames of the replay
* Fixed a bug where a replay named a.rec.rec could not be played by elma
* Some minor grammatical or spelling mistakes are fixed
