@@ -32,6 +32,7 @@
 * You can now f1-p in editor (same as f1-enter but in editor)
 * You can now change what LGR to use as the default from inside the options menu
 * Replays recorded with f1-enter are now saved into renders/rec_filename folder instead of the root
+* Internal editor allows Start object to be inside the ground
 
 ## Minor Bug Fixes
 * Enforce lowercase LGR filenames to fix loading issues on case-sensitive filesystems
